--- a/MauiApp8/wwwroot/index.html
+++ b/MauiApp8/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="MauiApp8.styles.css" />
     <link rel="icon" href="data:,">
 
-    <!-- Base polish: smooth fonts + dreamy background -->
+    <!-- Base polish: smooth fonts -->
     <style>
         html, body {
             height: 100%;
@@ -24,12 +24,7 @@
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
             text-rendering: optimizeLegibility;
-        }
-
-        /* Softer, girly Pinterest background (works with your theme) */
-        body {
             margin: 0;
-            background: radial-gradient(900px 600px at 15% 10%, rgba(255, 182, 213, 0.32), transparent 60%), radial-gradient(800px 520px at 85% 18%, rgba(186, 225, 255, 0.30), transparent 60%), radial-gradient(1000px 700px at 55% 92%, rgba(255, 255, 255, 0.14), transparent 60%), #0b1220;
         }
 
         /* Make headings look more aesthetic */
@@ -38,9 +33,9 @@
             letter-spacing: 0.2px;
         }
 
-        /* Loading text nicer */
+        /* Loading text uses theme colors */
         #app {
-            color: rgba(255,255,255,0.85);
+            color: var(--text);
             font-weight: 600;
             padding: 18px;
         }
@@ -61,6 +56,7 @@
     <script src="_framework/blazor.webview.js" autostart="false"></script>
 
     <script>
+        // Apply saved theme immediately to prevent flash
         (function () {
             try {
                 const saved = localStorage.getItem("app_theme");
